Fixes in- 1. Carousel's width 2. Font sizes 3. Main body's alignment

--- a/tpc_files/starter-template.css
+++ b/tpc_files/starter-template.css
@@ -53,6 +53,11 @@ hr{
 .navi .navbar .navbar-toggleable-md .fixed-top{
 	background-color:
         #black;
+    padding-top:  0px;
+    padding-left: 0px;
+    padding-right: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
 }
 
 .nav-item{
@@ -65,8 +70,8 @@ hr{
 .main-body{
     width: inherit;
     padding-top: 15px;
-    padding-left:10px;
-    padding-right: :10px;
+    padding-left:5px;
+    padding-right: :15px;
     padding-bottom:auto;
 }
 .d-pic d-card{
@@ -96,7 +101,7 @@ hr{
 }
 
 .heading{
-    font-weight:bolder;
+    font-weight:bold;
     color: darkcyan;
 }
 
